@@ -24,6 +24,7 @@ COM_CONTACT_EMAIL_THANKS="Thank you for your e-mail."
 COM_CONTACT_ERROR_CONTACT_NOT_FOUND="Contact not found"
 COM_CONTACT_FAX="Fax"
 COM_CONTACT_FORM_NC="Please make sure the form is complete and valid."
+COM_CONTACT_IMAGE_DETAILS="Contact-image"
 COM_CONTACT_LINKS="Links"
 COM_CONTACT_MAILENQUIRY="%s Enquiry"
 COM_CONTACT_MOBILE="Mobile"
